force-app/main/default/objects/Loan__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <label>Collateral</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>