force-app/main/default/objects/Loan__c/fields/Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_ID__c</fullName>
    <displayFormat>LOAN-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Loan ID</label>
    <type>AutoNumber</type>
</CustomField>