force-app/main/default/objects/Loan__c/fields/Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency__c</fullName>
    <label>Repayment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>